# webapp-snapcook

./: .gitignore  README.md  main.py  pyproject.toml  run_server.py  test_api.py
backend/: __init__.py  main.py
frontend/: index.html
