[project]
name = "snapcook"
version = "0.1.0"
description = "FastAPI backend for ingredient detection and recipe suggestions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.102.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.6",
]
